# yc_founders

./: main.py  pyproject.toml  pyrightconfig.json
app/: excel.py  files.py  models.py  parser.py
xlsx/: .~result.xlsx  result.xlsx
