[tool.poetry]
name = "ycfounders-parser"
version = "0.1.0"
description = "Парсер скрипт сделанный специально для заказа #476857 с Хабр.Фриланс"
authors = ["Васильев Александр <wyndace.av@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.29.1"
selectolax = "^0.3.12"
openpyxl = "^3.0.10"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
